# operator

./: .containerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Makefile  README.md  REUSE.toml  go.mod  go.sum  tools.go
.cursor/rules/: project.mdc
.github/: dependabot.yml  renovate.json
.github/workflows/: commit-verification.yml  go.yml  integration-tests.yml  lint.yml  release.yml  reuse-lint.yml  rust.yml
.tekton/: cocl-compute-pcrs-pull-request.yaml  cocl-compute-pcrs-push.yaml  cocl-operator-pull-request.yaml  cocl-operator-push.yaml  cocl-registration-server-pull-request.yaml  cocl-registration-server-push.yaml
api/: trusted-cluster-gen.go
api/v1alpha1/: crds.go  trustedexecutioncluster_webhook.go
attestation-key-register/: Cargo.toml  Containerfile
attestation-key-register/src/: main.rs
compute-pcrs/: Cargo.toml  Containerfile
compute-pcrs/src/: main.rs
examples/: ignition-coreos.json  vm-coreos-ign.yaml
kind/: ak-register-forward.yaml  config.yaml
lib/: Cargo.toml
must-gather/: gather
operator/: Cargo.toml
operator/src/: attestation_key_register.rs  conditions.rs  kbs-config.toml  lib.rs  main.rs  mock_client.rs  reference_values.rs  register_server.rs  test_utils.rs  tpm.rego  trustee.rs  webhook.rs
register-server/: Cargo.toml  Containerfile
scripts/: clean-cluster-kind.sh  create-cluster-kind.sh  generate-bundle-prod.sh  pre-pull-images.sh  prepare-release.sh
test_utils/: Cargo.toml
tests/: Cargo.toml  README.md  attestation.rs  no_disallowed_crypto.rs  trusted_execution_cluster.rs
(+28 files in other folders)
