# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "operator"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
clevis-pin-trustee-lib.workspace = true
trusted-cluster-operator-lib = { path = "../lib" }
compute-pcrs-lib.workspace = true
env_logger.workspace = true
futures-util = "0.3.32"
hex = "0.4.3"
json-patch = "4.2.0"
jsonptr = "0.7.1"
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
oci-client = { version = "0.17.0", default-features = false, features = ["native-tls"] }
oci-spec = "0.10.0"
openssl = "0.10.80"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.18"
tokio.workspace = true
toml = "1.1.2"
kbs-client = {git = "https://github.com/confidential-containers/trustee.git", rev = "e65897a9ad4eb3ac69fa2ec75ed831200eb2acd7", default-features = false, features = ["native-tls"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["use_pem"] }
jsonwebtoken-openssl = "1.0.0"

[dev-dependencies]
http.workspace = true
trusted-cluster-operator-test-utils = { path = "../test_utils" }
